<resources>
    <string name="app_name">Login</string>
    <string name="app_title">App de Roupas</string>

    <string name="camisa">Camisa</string>
    <string name="calca">Calça</string>
    <string name="sapato">Sapato</string>

    <string name="img_desc">Imagem do item selecionado</string>
    <string name="qtd_hint">Quantidade</string>

    <string name="btn_calcular">Calcular</string>

    <string name="item_info_placeholder">Item e preço aparecerão aqui</string>
    <string name="total_placeholder">Total aparecerá aqui</string>
    <string name="item_info_format">Item: %1$s - Preço: R$ %2$.2f</string>
    <string name="total_format">Total: R$ %1$.2f</string>

    <string name="titulo">App de Cálculos (Spinner)</string>
    <string name="hint_valor1">Valor 1</string>
    <string name="hint_valor2">Valor 2</string>
    <string name="resultado_placeholder">Resultado aparecerá aqui</string>
    <string name="resultado_format">Resultado: %1$.4f</string>

    <string-array name="ops_matematica">
        <item>Potência (v1^v2)</item>
        <item>Raiz Quadrada (v1)</item>
        <item>Hipotenusa (v1, v2)</item>
        <item> Seno (graus de v1)</item>
    </string-array>
    <string-array name="produtos">
        <item>Camisa</item>
        <item>Calça</item>
        <item>Sapato</item>
    </string-array>
    <string name="preco_unit">Preço: R$ %1$.2f</string>
    <string name="fechar">Fechar</string>
</resources>