<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imgProduto"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="centerInside"
        android:contentDescription="@string/img_desc"/>
    <TextView
        android:id="@+id/txtPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>
    <EditText
        android:id="@+id/edtQtd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/qtd_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>
</LinearLayout>